--- a/app/src/main/res/layout/fragment_farm_records_home.xml
+++ b/app/src/main/res/layout/fragment_farm_records_home.xml
@@ -1,12 +1,22 @@
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     tools:context="com.myfarmnow.myfarmcrop.fragments.farmrecords.FarmRecordsHomeFragment">
 
-<FrameLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_farm_records_home"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
+    </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,50 +24,27 @@
         android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-
         <RelativeLayout
-            android:id="@+id/mainlayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <com.google.android.material.appbar.AppBarLayout
-                android:id="@+id/mainView"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@color/colorPrimary"
-                android:theme="@style/AppTheme.AppBarOverlay">
-
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    app:popupTheme="@style/AppTheme.PopupOverlay">
-
-                </androidx.appcompat.widget.Toolbar>
-
-            </com.google.android.material.appbar.AppBarLayout>
-
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_below="@+id/mainView"
                 android:background="@drawable/home_background">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_gravity="center_vertical"
-                    android:paddingLeft="@dimen/dimen_20dp"
-                    android:paddingRight="@dimen/dimen_20dp">
-
+                    android:padding="@dimen/dimen_20dp">
 
                     <LinearLayout
                         android:id="@+id/buttons"
-                        android:layout_alignParentTop="true"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_alignParentTop="true"
                         android:orientation="vertical">
 
                         <androidx.cardview.widget.CardView
@@ -68,7 +55,6 @@
                             android:paddingTop="10dp"
                             android:paddingBottom="10dp">
 
-
                             <LinearLayout
                                 android:id="@+id/layout_crop_dashboard_crops"
                                 android:layout_width="match_parent"
@@ -77,7 +63,6 @@
                                 android:layout_marginTop="10dp"
                                 android:layout_marginEnd="10dp"
                                 android:layout_weight="1"
-
                                 android:orientation="vertical"
                                 android:paddingBottom="5dp">
 
@@ -93,75 +78,69 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="top"
+                                    android:fontFamily="@font/josefin_sans_semibold"
                                     android:gravity="center"
                                     android:paddingBottom="5dp"
-                                    android:fontFamily="@font/josefin_sans_semibold"
                                     android:text="@string/label_croprecords"
                                     android:textAllCaps="true"
                                     android:textColor="#000000"
                                     android:textStyle="bold" />
-
-
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/dimen_20dp"
+                            android:background="@drawable/background_round_white"
                             android:clipToPadding="false"
                             android:paddingTop="10dp"
-                            android:paddingBottom="10dp"
-                            android:layout_marginTop="@dimen/dimen_20dp"
-                            android:background="@drawable/background_round_white">
+                            android:paddingBottom="10dp">
 
                             <LinearLayout
-                                android:id="@+id/layout_crop_dashboard_inventory"
+                                android:id="@+id/layout_crop_dashboard_livestock_records"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="10dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginEnd="10dp"
                                 android:layout_weight="1"
-
                                 android:orientation="vertical"
                                 android:paddingBottom="5dp">
 
                                 <ImageView
                                     android:layout_width="160dp"
                                     android:layout_height="90dp"
+                                    android:layout_gravity="center"
                                     android:padding="20dp"
-                                    android:src="@drawable/ic_livestock"
-                                    android:layout_gravity="center"/>
+                                    android:src="@drawable/ic_livestock" />
 
                                 <TextView
                                     android:id="@+id/tv_litar"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="top"
+                                    android:fontFamily="@font/josefin_sans_semibold"
                                     android:gravity="center"
                                     android:paddingBottom="5dp"
-                                    android:fontFamily="@font/josefin_sans_semibold"
                                     android:text="@string/label_livestockrecords"
                                     android:textAllCaps="true"
                                     android:textColor="#000"
                                     android:textStyle="bold" />
-
-
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
-
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/dimen_20dp"
+                            android:background="@drawable/background_round_white"
                             android:clipToPadding="false"
                             android:paddingTop="10dp"
-                            android:paddingBottom="10dp"
-                            android:layout_marginTop="@dimen/dimen_20dp"
-                            android:background="@drawable/background_round_white">
+                            android:paddingBottom="10dp">
 
                             <LinearLayout
-                                android:id="@+id/layout_inventory_store"
+                                android:id="@+id/layout_dashboard_store"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="10dp"
@@ -172,9 +151,9 @@
                                 <ImageView
                                     android:layout_width="160dp"
                                     android:layout_height="90dp"
+                                    android:layout_gravity="center"
                                     android:padding="20dp"
-                                    android:src="@drawable/ic_store"
-                                    android:layout_gravity="center"/>
+                                    android:src="@drawable/ic_store" />
 
                                 <TextView
                                     android:layout_width="match_parent"
@@ -187,19 +166,17 @@
                                     android:textAllCaps="true"
                                     android:textColor="#000"
                                     android:textStyle="bold" />
-
-
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/dimen_20dp"
+                            android:background="@drawable/background_round_white"
                             android:clipToPadding="false"
                             android:paddingTop="10dp"
-                            android:paddingBottom="10dp"
-                            android:layout_marginTop="@dimen/dimen_20dp"
-                            android:background="@drawable/background_round_white">
+                            android:paddingBottom="10dp">
 
                             <LinearLayout
                                 android:id="@+id/layout_dashboard_financial_records"
@@ -207,8 +184,6 @@
                                 android:layout_height="wrap_content"
                                 android:layout_margin="10dp"
                                 android:layout_weight="1"
-
-
                                 android:orientation="vertical"
                                 android:paddingBottom="5dp">
 
@@ -222,29 +197,18 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="top"
+                                    android:fontFamily="@font/josefin_sans_semibold"
                                     android:gravity="center"
                                     android:paddingBottom="5dp"
-                                    android:fontFamily="@font/josefin_sans_semibold"
                                     android:text="@string/label_financial_records"
                                     android:textAllCaps="true"
                                     android:textColor="#000"
                                     android:textStyle="bold" />
-
-
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
-
-
                     </LinearLayout>
-
-
-
-
                 </RelativeLayout>
             </ScrollView>
-
-
-
 
             <FrameLayout
                 android:id="@+id/frame_layout_notifications"
@@ -273,9 +237,7 @@
                         app:tabIndicatorColor="@color/green_mh"
                         app:tabIndicatorHeight="0dp"
                         app:tabSelectedTextColor="@color/black"
-                        app:tabTextColor="@color/black"
-
-                        ></com.google.android.material.tabs.TabLayout>
+                        app:tabTextColor="@color/black" />
 
                     <androidx.viewpager.widget.ViewPager
                         android:id="@+id/viewPager"
@@ -289,11 +251,8 @@
             </FrameLayout>
 
 
-
         </RelativeLayout>
 
     </LinearLayout>
 
-</FrameLayout>
-
-</layout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
