--- a/app/src/main/res/layout/content_crop_farm_reports.xml
+++ b/app/src/main/res/layout/content_crop_farm_reports.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/fragment_crop_farm_reports"
     android:background="@color/white">
 
     <ScrollView
@@ -116,6 +115,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:layout_margin="8dp"
+                android:visibility="gone"
                 android:background="@drawable/black_border"
                 >
                 <LinearLayout
@@ -171,6 +171,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:layout_margin="8dp"
+                android:visibility="gone"
                 android:background="@drawable/black_border"
                 >
                 <LinearLayout
