--- a/app/src/main/res/layout/activity_farm_records_dashboard.xml
+++ b/app/src/main/res/layout/activity_farm_records_dashboard.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".activities.farmrecords.FarmRecordsDashboardActivity">
 
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".activities.farmrecords.FarmRecordsDashboardActivity">
 
     <fragment
         android:id="@+id/nav_host_fragment"
@@ -21,9 +19,4 @@
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/farm_records_nav_graph" />
 
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-</layout>
